fix horizontal overflow issue on mobile devices

--- a/markup-static/styles/blocks/timeline-grid.scss
+++ b/markup-static/styles/blocks/timeline-grid.scss
@@ -1,6 +1,7 @@
 .timeline-grid {
   position: relative;
   top: 139px;
+  overflow-x: auto;
 
   .grid-content {
     .row {
